# zensical-segfault-repro

./: .gitignore  README.md  demo_cli.py  mkdocs.yml  pyproject.toml  zensical.toml
docs/: cli-reference.md  index.md
