[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zensical-bug-repro"
version = "0.1.0"
description = "Minimal reproducible project for Zensical mkdocs-click segfault bug"
requires-python = ">=3.12,<3.13"
dependencies = [
    "rich-click",
    "zensical==0.0.6",
    "mkdocs-click==0.9.0",
    "mkdocs",
    "mkdocs-material>=9.5.34",
    "torch>=2.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
demo-cli = "demo_cli:cli"
